--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -1,7 +1,6 @@
-<html>
-<head>
-    <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}" />
-</head>
+{% extends '::base.html.twig' %}
+
+{% block body %}
     {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
     {{ form_start(form) }}
         {{ form_row(form.username) }}
@@ -12,4 +11,4 @@
         <button class="btn btn-primary" type="submit">Register!</button>
     </div>
     {{ form_end(form) }}
-</html>
+{% endblock %}
