--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,28 +1,27 @@
-<html>
-<head>
-    <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}" />
-</head>
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+{% extends '::base.html.twig' %}
 
-<form class="form-inline" action="{{ path('login') }}" method="post">
-    <div class="form-group">
-        <label class="sr-only" for="username">Username</label>
-        <input type="text" class="form-control" placeholder="Username"
-           id="username" name="_username" value="{{ last_username }}" />
-    </div>
-    <div class="form-group">
-        <label class="sr-only" for="password">Password</label>
-        <input type="password" class="form-control" placeholder="Password"
-               id="password" name="_password" />
-    </div>
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
+{% block body %}
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 
-    <button class="btn btn-primary" type="submit">Login</button>
-</form>
-</html>
+    <form class="form-inline" action="{{ path('login') }}" method="post">
+        <div class="form-group">
+            <label class="sr-only" for="username">Username</label>
+            <input type="text" class="form-control" placeholder="Username"
+               id="username" name="_username" value="{{ last_username }}" />
+        </div>
+        <div class="form-group">
+            <label class="sr-only" for="password">Password</label>
+            <input type="password" class="form-control" placeholder="Password"
+                   id="password" name="_password" />
+        </div>
+        {#
+            If you want to control the URL the user
+            is redirected to on success (more details below)
+            <input type="hidden" name="_target_path" value="/account" />
+        #}
+
+        <button class="btn btn-primary" type="submit">Login</button>
+    </form>
+{% endblock %}
