--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,20 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {% block navigation %}
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="{{ path('welcome') }}">Newscast</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{ path('login') }}">Login</a></li>
+                        <li><a href="{{ path('user_registration') }}">Registration</a></li>
+                        <li><a href="{{ path('about') }}">About</a></li>
+                    </ul>
+                </div>
+            </nav>
+        {% endblock %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
