Removed demo luckyApp

--- a/app/Resources/views/about/about.html.twig
+++ b/app/Resources/views/about/about.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <header>
-        <h1 class="text-center">About newscast</h1>
+        <h1 class="text-center">About Newscast</h1>
     </header>
     <article>
         <p class="lead">Newscast is a project, developed by Stepan Gerasimovich and Oleg Medvedskiy(?) in itransition.</p>
