--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -1,4 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'base.html.twig' %}
+
+{% block title %}Registration{% endblock%}
 
 {% block body %}
     {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
