logout and little fixes

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,14 +1,9 @@
-{% extends '::base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Newscast{% endblock%}
 
 {% block body %}
-    <html>
-    <head>
-        <title>Welcome!</title></head>
-    <body>
-    <h1>Lets get started!</h1>
-    <br>Hello!
-    </body>
-    </html>
+    <header>
+        <h1 class="text-center">Main page. All news will be here</h1>
+    </header>
 {% endblock %}
