--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -9,7 +9,7 @@
         {{ form_row(form.email) }}
         {{ form_row(form.plainPassword.first) }}
         {{ form_row(form.plainPassword.second) }}
-    <div style="width: 0; margin: auto;">
+    <div>
         <button class="btn btn-primary" type="submit">Register!</button>
     </div>
     {{ form_end(form) }}
