--- a/app/Resources/views/about/about.html.twig
+++ b/app/Resources/views/about/about.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}About{% endblock%}
 
@@ -7,6 +7,12 @@
         <h1 class="text-center">About Newscast</h1>
     </header>
     <article>
-        <p class="lead">Newscast is a project, developed by Stepan Gerasimovich and Oleg Medvedskiy(?) in itransition.</p>
+        <p class="lead">Newscast is a project, developed by Stepan Gerasimovich and Oleg Medvedskiy(?)
+            in itransition.</p>
+        <p class="lead">Icons made by
+            <a href="http://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a>
+            from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+            is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+                              title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
     </article>
 {% endblock %}
