--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,19 +6,27 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('bootstrap.min.css') }}" />
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('favicons/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" href="{{ asset('favicons/favicon-32x32.png') }}" sizes="32x32">
+        <link rel="icon" type="image/png" href="{{ asset('favicons/favicon-16x16.png') }}" sizes="16x16">
+        <link rel="manifest" href="{{ asset('favicons/manifest.json') }}">
+        <link rel="mask-icon" href="{{ asset('favicons/safari-pinned-tab.svg') }}" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         {% block navigation %}
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="{{ path('welcome') }}">Newscast</a>
+                        <a class="navbar-brand" href="{{ path('welcome') }}">
+                            <img src="{{ asset('logo.svg') }}" width="50" height="50">
+                        </a>
                     </div>
                     <ul class="nav navbar-nav">
                         <li><a href="{{ path('login') }}">Login</a></li>
                         <li><a href="{{ path('user_registration') }}">Registration</a></li>
                         <li><a href="{{ path('about') }}">About</a></li>
+                        <li><a href="{{ path('logout') }}">Logout</a></li>
                     </ul>
                 </div>
             </nav>
