--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -18,12 +18,10 @@
             <input type="password" class="form-control" placeholder="Password"
                    id="password" name="_password" />
         </div>
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
 
         <button class="btn btn-primary" type="submit">Login</button>
     </form>
+    <div>
+        <a href="{{ path('forgot') }}">Forgot username or password?</a>
+    </div>
 {% endblock %}
