--- a/app/Resources/views/security/password_recovery.html.twig
+++ b/app/Resources/views/security/password_recovery.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Login{% endblock%}
+{% block title %}Account recovery{% endblock%}
 
 {% block body %}
 
     <p class="text-warning">Enter your Newscast email address that you used to register.<br>
         We'll send you an email with your username and a link to reset your password.</p>
-    <form class="form-inline" action="{{ path('forgot') }}" method="post">
+    <form class="form-inline" action="{{ path('recovery') }}" method="post">
         <div class="form-group">
             <label class="sr-only" for="email">Email</label>
             <input type="text" class="form-control" placeholder="Email"
                    id="email" name="_email" value="{{ email }}" />
         </div>
 
-        <button class="btn btn-primary" type="Submit">Login</button>
+        <button class="btn btn-primary" type="Submit">Send me a recovery link</button>
     </form>
     <br>
     {% for flashMessage in app.session.flashbag.get('recovery-password-success') %}
