--- a/app/Resources/views/security/recoveryEmail.txt.twig
+++ b/app/Resources/views/security/recoveryEmail.txt.twig
@@ -1,6 +1,6 @@
 Hello!
 Here is your username: {{ username }}
-And password: {{ password }}
+And link to reset your password: {{ confirmationUrl }}
 
 Sincerely yours,
 Newscast team.
