--- a/app/Resources/views/security/recoveryEmail.txt.twig
+++ b/app/Resources/views/security/recoveryEmail.txt.twig
@@ -1,6 +1,5 @@
 Hello!
-Here is your username: {{ username }}
-And link to reset your password: {{ confirmationUrl }}
+Here is link to reset your password: {{ confirmationUrl }}
 
 Sincerely yours,
 Newscast team.
