routing moved to yml to set up locales

--- a/app/Resources/views/about/about.html.twig
+++ b/app/Resources/views/about/about.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}About{% endblock%}
+{% block title %}About - Newscast{% endblock%}
 
 {% block body %}
     <header>
