--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,9 +22,9 @@
                             <img src="{{ asset('logo.svg') }}" width="50" height="50">
                         </a>
                     </div>
-                    <ul class="nav navbar-nav">
-                        <li><a href="{{ path('login') }}">Login</a></li>
-                        <li><a href="{{ path('user_registration') }}">Registration</a></li>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{{ path('login') }}">Log in</a></li>
+                        <li><a href="{{ path('user_registration') }}">Sign up</a></li>
                         <li><a href="{{ path('about') }}">About</a></li>
                         <li><a href="{{ path('logout') }}">Logout</a></li>
                     </ul>
