--- a/app/Resources/views/security/password_recovery.html.twig
+++ b/app/Resources/views/security/password_recovery.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Account recovery{% endblock%}
+{% block title %}Recovery access - Newscast{% endblock%}
 
 {% block body %}
 
