--- a/app/Resources/views/security/password_reset.html.twig
+++ b/app/Resources/views/security/password_reset.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset password{% endblock%}
+{% block title %}Reset password - Newscast{% endblock%}
 
 {% block body %}
 
