--- a/app/Resources/views/administration/admin.html.twig
+++ b/app/Resources/views/administration/admin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin page{% endblock%}
+{% block title %}Admin page - Newscast{% endblock%}
 
 {% block body %}
     <header>
