--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Registration{% endblock%}
+{% block title %}Sign up - Newscast{% endblock%}
 
 {% block body %}
     {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
@@ -9,6 +9,7 @@
         {{ form_row(form.email) }}
         {{ form_row(form.plainPassword.first) }}
         {{ form_row(form.plainPassword.second) }}
+        {{ form_row(form.wantNewsletter) }}
     <div>
         <button class="btn btn-primary" type="submit">Register!</button>
     </div>
