--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Login{% endblock%}
+{% block title %}Log in - Newscast{% endblock%}
 
 {% block body %}
     {% if error %}
