--- a/app/Resources/views/about/about.html.twig
+++ b/app/Resources/views/about/about.html.twig
@@ -7,7 +7,7 @@
         <h1 class="text-center">About Newscast</h1>
     </header>
     <article>
-        <p class="lead">Newscast is a project, developed by Stepan Gerasimovich and Oleg Medvedskiy(?)
+        <p class="lead">Newscast is a project, developed by Stepan Gerasimovich and Oleg Medvedsky
             in itransition.</p>
         <p class="lead">Icons made by
             <a href="http://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a>
