--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('bootstrap.min.css') }}"/>
         <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('favicons/apple-touch-icon.png') }}">
         <link rel="icon" type="image/png" href="{{ asset('favicons/favicon-32x32.png') }}" sizes="32x32">
         <link rel="icon" type="image/png" href="{{ asset('favicons/favicon-16x16.png') }}" sizes="16x16">
         <link rel="manifest" href="{{ asset('favicons/manifest.json') }}">
         <link rel="mask-icon" href="{{ asset('favicons/safari-pinned-tab.svg') }}" color="#5bbad5">
         <meta name="theme-color" content="#ffffff">
+        {% stylesheets '@bootstrap_css'%}
+        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
+        {% endstylesheets %}
     </head>
     <body>
         {% block navigation %}
@@ -17,21 +19,39 @@
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="{{ path('welcome') }}">
-                            <img src="{{ asset('logo.svg') }}" width="50" height="50">
+                            <img src="{{ asset('assets/logo.svg') }}" width="50" height="50">
                         </a>
                     </div>
                     <ul class="nav navbar-nav navbar-right">
+                        {% if not is_granted('ROLE_USER') %}
                         <li><a href="{{ path('login') }}">Log in</a></li>
                         <li><a href="{{ path('user_registration') }}">Sign up</a></li>
+                        {% endif %}
+                        {% if is_granted('ROLE_MODERATOR') %}
                         <li><a href="{{ path('create_article') }}">Create article</a></li>
+                        {% endif %}
+                        {% if is_granted('ROLE_ADMIN') %}
                         <li><a href="{{ path('admin') }}">Admin page</a></li>
+                        {% endif %}
+                        {% if is_granted('ROLE_USER') %}
                         <li><a href="{{ path('about') }}">About</a></li>
                         <li><a href="{{ path('logout') }}">Logout</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
         {% endblock %}
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            {% javascripts '@jquery' '@autoresize'%}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+            <script type="text/javascript">
+                jQuery(function()
+                {
+                    jQuery('textarea').autoResize();
+                });
+            </script>
+            {% endjavascripts %}
+        {% endblock %}
     </body>
 </html>
