--- a/app/Resources/views/news/newsEdit.html.twig
+++ b/app/Resources/views/news/newsEdit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
+    {% form_theme form 'bootstrap_3_layout.html.twig' %}
     {{ form_start(form) }}
     {{ form_row(form.title) }}
     {{ form_row(form.author) }}
