--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Sign up - Newscast{% endblock%}
 
 {% block body %}
-    {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
+    {% form_theme form 'bootstrap_3_layout.html.twig' %}
     {{ form_start(form) }}
         {{ form_row(form.username) }}
         {{ form_row(form.email) }}
