--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -9,12 +9,12 @@
 
     <form class="form-inline" action="{{ path('login') }}" method="post">
         <div class="form-group">
-            <label class="sr-only" for="username">Email</label>
+            <label for="username">Email</label>
             <input type="text" class="form-control" placeholder="Email"
-               id="email" name="_email" />
+               id="email" name="_email" value="{{ last_username }}"/>
         </div>
         <div class="form-group">
-            <label class="sr-only" for="password">Password</label>
+            <label for="password">Password</label>
             <input type="password" class="form-control" placeholder="Password"
                    id="password" name="_password" />
         </div>
