--- a/app/Resources/views/news/newsEdit.html.twig
+++ b/app/Resources/views/news/newsEdit.html.twig
@@ -11,6 +11,7 @@
     {{ form_row(form.category) }}
     {{ form_row(form.publicationDate) }}
     {{ form_row(form.description) }}
+    {{ form_row(form.body) }}
     <div>
         <button class="btn btn-primary" type="submit">Save</button>
     </div>
