--- a/app/Resources/views/administration/admin.html.twig
+++ b/app/Resources/views/administration/admin.html.twig
@@ -6,4 +6,16 @@
     <header>
         <h1 class="text-center">Admin page</h1>
     </header>
+    <body>
+    <div id="entities-grid"></div>
+    <script src={{ asset('ajaxgrid.js') }}></script>
+    <script>
+        $("#entities-grid").ajaxgrid({
+            dataUrl: "http://google.com",
+            sortableColumns: ["id", "surname", "age"],
+            filterableColumns: ["id", "age"],
+            rowsPerPage: 5
+        });
+    </script>
+    </body>
 {% endblock %}
