Added KnpPaginatorBundle, yes, table, yes, ugly, I'll fix it later. Added search form(not working)

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,7 +3,29 @@
 {% block title %}Newscast{% endblock%}
 
 {% block body %}
-    <header>
-        <h1 class="text-center">Main page. All news will be here</h1>
-    </header>
+    <table>
+        <tr>
+            {# sorting of properties based on query components #}
+            <th{% if pagination.isSorted('a.Title') %} class="sorted"{% endif %}>
+                {{ knp_pagination_sortable(pagination, 'Title', 'a.title') }}</th>
+            <th>{{ knp_pagination_sortable(pagination, 'Release', 'a.publicationDate') }}</th>
+            <th>{{ knp_pagination_sortable(pagination, 'Category', 'a.category.name') }}</th>
+        </tr>
+
+        {# table body #}
+        {% for article in pagination %}
+            <tr {% if loop.index is odd %}class="color"{% endif %}>
+                <td><strong>{{ article.title }}</strong></td>
+                <td>{{ article.publicationDate | date('Y-m-d') }}</td>
+                <td>{{ article.category.name }}</td>
+            </tr>
+            <tr>
+                <td>{{ article.description }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+    {# display navigation #}
+    <div class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </div>
 {% endblock %}
