--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,7 +11,7 @@
         <meta name="theme-color" content="#ffffff">
         {% stylesheets '@bootstrap_css'%}
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('assets/moderator_dropdown.css') }}"/>
+        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('assets/navbar_fixes.css') }}"/>
         {% endstylesheets %}
     </head>
     <body>
@@ -22,6 +22,12 @@
                         <a class="navbar-brand" href="{{ path('welcome') }}">
                             <img src="{{ asset('assets/logo.svg') }}" width="50" height="50">
                         </a>
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">Search</button>
+                        </form>
                     </div>
                     <ul class="nav navbar-nav navbar-right">
                         {% if not is_granted('ROLE_USER') %}
