--- a/web/assets/navbar_fixes.css
+++ b/web/assets/navbar_fixes.css
@@ -5,3 +5,11 @@
     border: none;
     text-align: -webkit-match-parent;
 }
+
+.navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 0px 5px;
+    font-size: 18px;
+    line-height: 20px;
+}
