--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,10 +9,12 @@
         <link rel="manifest" href="{{ asset('favicons/manifest.json') }}">
         <link rel="mask-icon" href="{{ asset('favicons/safari-pinned-tab.svg') }}" color="#5bbad5">
         <meta name="theme-color" content="#ffffff">
-        {% stylesheets '@bootstrap_css'%}
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('assets/navbar_fixes.css') }}"/>
-        {% endstylesheets %}
+        {%block stylesheets%}
+            {% stylesheets '@bootstrap_css'%}
+                <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}"/>
+                <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('assets/navbar_fixes.css') }}"/>
+            {% endstylesheets %}
+        {% endblock %}
     </head>
     <body>
         {% block navigation %}
