--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,10 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block stylesheets%}
-    {{ parent() }}
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('assets/mainpage_fixes.css') }}"/>
-{% endblock %}
-
 {% block title %}Newscast{% endblock%}
 
 {% block body %}
@@ -20,21 +15,22 @@
             </tr>
         </table>
     <br>
-        {# table body #}
         {% for article in pagination %}
-            <div class="article-title">
-                {{ article.title }}
+            <div class="margin-height-4">
+                <a  href="{{ path('article', {'slug': article.id}) }}" class="block-link">
+                    <div class="article-title">
+                        {{ article.title }}
+                    </div>
+                    <div class="hr"></div>
+                    <ul class="small attributes list-inline">
+                        <li>{{ article.publicationDate | date('d M Y') }}</li>
+                        <li class="margin-left-8">{{ article.category.name }}</li>
+                    </ul>
+                    <div>
+                        {{ article.description }}
+                    </div>
+                </a>
             </div>
-            <div class="small attributes">
-                {{ article.publicationDate | date('d M Y') }}
-                {{ article.category.name }}
-            </div>
-            <div>
-                {{ article.description }}
-            </div>
-            <table class="table">
-                <tr><th></th></tr>
-            </table>
         {% endfor %}
         {# display navigation #}
         <div class="navigation">
