--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Sign up - Newscast{% endblock%}
 
 {% block body %}
-    <div class="block-width-80">
+    <div class="block-width-40 center-block">
         {% form_theme form 'bootstrap_3_layout.html.twig' %}
         {{ form_start(form) }}
             {{ form_row(form.username) }}
