--- a/app/Resources/views/security/password_recovery.html.twig
+++ b/app/Resources/views/security/password_recovery.html.twig
@@ -3,29 +3,30 @@
 {% block title %}Recovery access - Newscast{% endblock%}
 
 {% block body %}
+    <div class=" block-width-40 margin-left-8">
+        <p class="text-warning">Enter your Newscast email address that you used to register.<br>
+            We'll send you an email with your username and a link to reset your password.</p>
+        <form class="form" action="{{ path('recovery') }}" method="post">
+            <div class="form-group">
+                <label class="sr-only" for="email">Email</label>
+                <input type="text" class="form-control" placeholder="Email"
+                       id="email" name="_email" value="{{ email }}" />
+            </div>
 
-    <p class="text-warning">Enter your Newscast email address that you used to register.<br>
-        We'll send you an email with your username and a link to reset your password.</p>
-    <form class="form-inline" action="{{ path('recovery') }}" method="post">
-        <div class="form-group">
-            <label class="sr-only" for="email">Email</label>
-            <input type="text" class="form-control" placeholder="Email"
-                   id="email" name="_email" value="{{ email }}" />
-        </div>
+            <button class="btn btn-primary" type="Submit">Send me a recovery link</button>
+        </form>
+        <br>
+        {% for flashMessage in app.session.flashbag.get('recovery-password-success') %}
+            <div  class="alert alert-success">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
 
-        <button class="btn btn-primary" type="Submit">Send me a recovery link</button>
-    </form>
-    <br>
-    {% for flashMessage in app.session.flashbag.get('recovery-password-success') %}
-        <div  class="alert alert-success">
-            {{ flashMessage }}
-        </div>
-    {% endfor %}
-
-    {% for flashMessage in app.session.flashbag.get('recovery-password-failed') %}
-        <div  class="alert alert-danger">
-            {{ flashMessage }}
-        </div>
-    {% endfor %}
+        {% for flashMessage in app.session.flashbag.get('recovery-password-failed') %}
+            <div  class="alert alert-danger">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
