--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -3,31 +3,33 @@
 {% block title %}Log in - Newscast{% endblock%}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="block-width-40 margin-left-8">
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    <form class="form-inline" action="{{ path('login') }}" method="post">
-        <div class="form-group">
-            <label for="username">Email</label>
-            <input type="text" class="form-control" placeholder="Email"
-               id="email" name="_email" value="{{ last_username }}"/>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" placeholder="Password"
-                   id="password" name="_password" />
+        <form class="form" action="{{ path('login') }}" method="post">
+            <div class="form-group">
+                <label for="username">Email</label>
+                <input type="text" class="form-control" placeholder="Email"
+                   id="email" name="_email" value="{{ last_username }}"/>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" placeholder="Password"
+                       id="password" name="_password" />
+            </div>
+
+            <button class="btn btn-primary" type="submit">Log in</button>
+        </form>
+        <div>
+            <a href="{{ path('recovery') }}">Forgot password?</a>
         </div>
 
-        <button class="btn btn-primary" type="submit">Log in</button>
-    </form>
-    <div>
-        <a href="{{ path('recovery') }}">Forgot password?</a>
+        {% for flashMessage in app.session.flashbag.get('can-login') %}
+            <div  class="alert alert-success">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
     </div>
-
-    {% for flashMessage in app.session.flashbag.get('can-login') %}
-        <div  class="alert alert-success">
-            {{ flashMessage }}
-        </div>
-    {% endfor %}
 {% endblock %}
