--- a/web/assets/style_fixes.css
+++ b/web/assets/style_fixes.css
@@ -28,6 +28,10 @@
     .block-width-80 {
         width: 80%;
     }
+
+    .block-width-40 {
+        width: 40%;
+    }
 }
 
 .article-title {
@@ -63,6 +67,10 @@ div.hr hr {
 
 .margin-left-8 {
     margin-left: 8vw;
+}
+
+.margin-left-6 {
+    margin-left: 6vw;
 }
 
 .block-link {
