--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,12 +25,9 @@
                             <img src="{{ asset('assets/logo.svg') }}" width="50" height="50">
                         </a>
                         {% if is_granted('ROLE_USER') %}
-                        <form class="navbar-form navbar-left" role="search">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
+                            <div class="navbar navbar-left margin-0" id="admin-navbar-collapse-1">
+                                {{ knp_menu_render('main', {'currentClass': false}) }}
                             </div>
-                            <button type="submit" class="btn btn-default">Search</button>
-                        </form>
                         {% endif %}
                     </div>
                     <ul class="nav navbar-nav navbar-right">
@@ -39,6 +36,14 @@
                             <li><a href="{{ path('user_registration') }}">Sign up</a></li>
                         {% endif %}
                         {% if is_granted('ROLE_USER') %}
+                            <li>
+                                <form class="navbar-form" role="search">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Search">
+                                    </div>
+                                    <button type="submit" class="btn btn-default">Search</button>
+                                </form>
+                            </li>
                             <li>
                                 <button class="dropdown-toggle btn-link"
                                         type="button" data-toggle="dropdown">{{ app.user.username }}
