--- a/app/Resources/views/administration/moderator.html.twig
+++ b/app/Resources/views/administration/moderator.html.twig
@@ -4,16 +4,19 @@
 
 {% block body %}
     <header>
-        <h1 class="text-center">Manage articles</h1>
+        <h1 class="text-center lead">Manage users</h1>
     </header>
     <div id="entities-grid"></div>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
     <script src={{ asset('assets/ajaxgrid.js') }}></script>
     <script>
         $("#entities-grid").ajaxgrid({
-            dataUrl: "http://localserver:8000/ajax/articles",
-            sortableColumns: ["id", "title", "category", "publicationDate", "description"],
-            filterableColumns: ["id", "title", "category", "publicationDate", "description"],
-            rowsPerPage: 15
+            dataUrl: "http://localhost:8000/ajax/articles",
+            sortableColumns: ["id", "title", "author", "category", "publicationDate"],
+            filterableColumns: ["id", "title", "author", "category", "publicationDate"],
+            rowsPerPage: 5
         });
     </script>
 {% endblock %}
