--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
                         </a>
                         {% if is_granted('ROLE_USER') %}
                             <div class="navbar navbar-left margin-0" id="admin-navbar-collapse-1">
-                                {{ knp_menu_render('main', {'currentClass': false}) }}
+                                {{ knp_menu_render('main', {'currentClass': 'active'}) }}
                             </div>
                         {% endif %}
                     </div>
@@ -37,11 +37,11 @@
                         {% endif %}
                         {% if is_granted('ROLE_USER') %}
                             <li>
-                                <form class="navbar-form" role="search">
+                                <form class="navbar-form" role="form" method="post" action="{{ path('search') }}" >
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Search">
+                                        <input type="text" id="search" name="_search" class="form-control" placeholder="Search">
                                     </div>
-                                    <button type="submit" class="btn btn-default">Search</button>
+                                    <button type="submit" class="btn btn-default" value='search'>Search</button>
                                 </form>
                             </li>
                             <li>
@@ -52,6 +52,7 @@
                                 <ul class="dropdown-menu">
                                     {% if is_granted('ROLE_MODERATOR') %}
                                         <li><a href="{{ path('edit_article', {'id': 'new'}) }}">Create article</a></li>
+                                        <li><a href="{{ path('category_index') }}">Manage categories</a></li>
                                         <li><a href="{{ path('moderating_articles') }}">Manage articles</a></li>
                                     {% endif %}
 
