--- a/app/Resources/views/menu/knp_menu.html.twig
+++ b/app/Resources/views/menu/knp_menu.html.twig
@@ -5,15 +5,9 @@
     {% if item.displayed %}
         {%- set attributes = item.attributes %}
         {%- set is_dropdown = attributes.dropdown|default(false) %}
-        {%- set divider_prepend = attributes.divider_prepend|default(false) %}
-        {%- set divider_append = attributes.divider_append|default(false) %}
 
         {# unset bootstrap specific attributes #}
-        {%- set attributes = attributes|merge({'dropdown': null, 'divider_prepend': null, 'divider_append': null }) %}
-
-        {%- if divider_prepend %}
-            {{ block('dividerElement') }}
-        {%- endif %}
+        {%- set attributes = attributes|merge({'dropdown': null }) %}
 
         {# building the class of the item #}
         {%- set classes = item.attribute('class') is not empty ? [item.attribute('class')] : [] %}
@@ -57,35 +51,17 @@
             {# render the list of children#}
             {{ block('list') }}
         </li>
-
-        {%- if divider_append %}
-            {{ block('dividerElement') }}
-        {%- endif %}
-    {% endif %}
-{% endblock %}
-
-{% block dividerElement %}
-    {% if item.level == 1 %}
-        <li class="divider-vertical"></li>
-    {% else %}
-        <li class="divider"></li>
     {% endif %}
 {% endblock %}
 
 {% block linkElement %}
     <a href="{{ item.uri }}"{{ macros.attributes(item.linkAttributes) }}>
-        {% if item.attribute('icon') is not empty  %}
-            <i class="{{ item.attribute('icon') }}"></i>
-        {% endif %}
         {{ block('label') }}
     </a>
 {% endblock %}
 
 {% block spanElement %}
     <span>{{ macros.attributes(item.labelAttributes) }}>
-        {% if item.attribute('icon') is not empty  %}
-            <i class="{{ item.attribute('icon') }}"></i>
-        {% endif %}
         {{ block('label') }}
 	</span>
 {% endblock %}
@@ -97,9 +73,6 @@
     {%- set attributes = attributes|merge({'class': classes|join(' ')}) %}
     {%- set attributes = attributes|merge({'data-toggle': 'dropdown'}) %}
     <a href="#"{{ macros.attributes(attributes) }}>
-        {% if item.attribute('icon') is not empty  %}
-            <i class="{{ item.attribute('icon') }}"></i>
-        {% endif %}
         {{ block('label') }}
         <b class="caret"></b>
     </a>
