--- a/app/Resources/views/news/articleEdit.html.twig
+++ b/app/Resources/views/news/articleEdit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="block-width-95">
-        {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
+        {% form_theme form 'bootstrap_3_layout.html.twig' %}
         {{ form_start(form) }}
             {{ form_row(form.title) }}
             {{ form_row(form.author) }}
