--- a/app/Resources/views/administration/moderator.html.twig
+++ b/app/Resources/views/administration/moderator.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <header>
-        <h1 class="text-center lead">Manage users</h1>
+        <h1 class="text-center lead">Manage articles</h1>
     </header>
     <div id="entities-grid"></div>
 {% endblock %}
