--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,16 +32,33 @@
                     </div>
                     <ul class="nav navbar-nav navbar-right">
                         {% if not is_granted('ROLE_USER') %}
-                            <li><a href="{{ path('login') }}">Log in</a></li>
-                            <li><a href="{{ path('user_registration') }}">Sign up</a></li>
+                            <li>
+                                <a href="{{ path('login') }}">
+                                    {% trans %}
+                                    Log in
+                                    {% endtrans %}
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ path('user_registration') }}">
+                                    {% trans %}
+                                    Sign up
+                                    {% endtrans %}
+                                </a>
+                            </li>
                         {% endif %}
                         {% if is_granted('ROLE_USER') %}
                             <li>
-                                <form class="navbar-form" role="form" method="post" action="{{ path('search') }}" >
+                                <form class="navbar-form" role="form" method="get" action="{{ path('search') }}" >
                                     <div class="form-group">
-                                        <input type="text" id="search" name="_search" class="form-control" placeholder="Search">
+                                        <input type="text" id="search" name="_search"
+                                               class="form-control" placeholder="{% trans %}Search{% endtrans %}">
                                     </div>
-                                    <button type="submit" class="btn btn-default" value='search'>Search</button>
+                                    <button type="submit" class="btn btn-default" value='search'>
+                                        {% trans %}
+                                        Search
+                                        {% endtrans %}
+                                    </button>
                                 </form>
                             </li>
                             <li>
@@ -51,15 +68,45 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                     {% if is_granted('ROLE_MODERATOR') %}
-                                        <li><a href="{{ path('edit_article', {'id': 'new'}) }}">Create article</a></li>
-                                        <li><a href="{{ path('category_index') }}">Manage categories</a></li>
-                                        <li><a href="{{ path('moderating_articles') }}">Manage articles</a></li>
+                                        <li>
+                                            <a href="{{ path('edit_article', {'id': 'new'}) }}">
+                                                {% trans %}
+                                                Create article
+                                                {% endtrans %}
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('category_index') }}">
+                                                {% trans %}
+                                                Manage categories
+                                                {% endtrans %}
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('moderating_articles') }}">
+                                                {% trans %}
+                                                Manage articles
+                                                {% endtrans %}
+                                            </a>
+                                        </li>
                                     {% endif %}
 
                                     {% if is_granted('ROLE_ADMIN') %}
-                                        <li><a href="{{ path('admin') }}">Manage users</a></li>
+                                        <li>
+                                            <a href="{{ path('admin') }}">
+                                                {% trans %}
+                                                Manage users
+                                                {% endtrans %}
+                                            </a>
+                                        </li>
                                     {% endif %}
-                                    <li><a href="{{ path('logout') }}">Logout</a></li>
+                                    <li>
+                                        <a href="{{ path('logout') }}">
+                                            {% trans %}
+                                            Logout
+                                            {% endtrans %}
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                         {% endif %}
