--- a/app/Resources/views/news/articlePage.html.twig
+++ b/app/Resources/views/news/articlePage.html.twig
@@ -10,18 +10,37 @@
         <ul class="small attributes list-inline">
             <li class="margin-left-6">by {{ author }}</li>
             <li class="margin-left-6">{{ publicationDate | date('d M Y') }}</li>
-            <li class="margin-left-6">{{ category }}</li>
-            <li class="margin-left-6">{{ views }} views</li>
+            <li class="margin-left-6">{{ category | trans}}</li>
+            <li class="margin-left-6">{{ views }}
+                {% trans %}
+                views
+                {% endtrans %}
+            </li>
             {% if is_granted('ROLE_MODERATOR') %}
             <li class="margin-left-6 btn-group text-primary">
                 <button class="dropdown-toggle btn-link"
-                        type="button" data-toggle="dropdown">Settings
+                        type="button" data-toggle="dropdown">
+                    {% trans %}
+                    Settings
+                    {% endtrans %}
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a href="{{ path('edit_article', {'id': id}) }}">Edit</a></li>
-                    <li><a href="{{ path('delete_article', {'id': id}) }}"
-                           onclick="return confirm('Are you sure?');">Delete</a></li>
+                    <li>
+                        <a href="{{ path('edit_article', {'id': id}) }}">
+                            {% trans %}
+                            Edit
+                            {% endtrans %}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('delete_article', {'id': id}) }}"
+                           onclick="return confirm('{% trans %}Are you sure?{% endtrans %}');">
+                            {% trans %}
+                            Delete
+                            {% endtrans %}
+                        </a>
+                    </li>
                 </ul>
             </li>
             {% endif %}
@@ -31,6 +50,10 @@
         </span>
     </div>
     <div class="text-align-center margin-height-4">
-        <a href="{{ path('about') }}" class="gray-link">About Newscast</a>
+        <a href="{{ path('about') }}" class="gray-link">
+            {% trans %}
+            About Newscast
+            {% endtrans %}
+        </a>
     </div>
 {% endblock %}
